[package]
edition = "2024"
name = "micromouse"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
# Change stm32f446re to your chip name, if necessary.
embassy-stm32 = { version = "0.5.0", features = ["defmt", "stm32f446re", "unstable-pac", "memory-x", "time-driver-tim4", "exti", "chrono"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.3", features = ["async", "defmt-03"] }
embedded-io = { version = "0.7.1" }
embedded-io-async = { version = "0.7.0" }
panic-probe = { version = "1.0", features = ["print-defmt"] }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.9", default-features = false }
critical-section = "1.1"
nb = "1.0.0"
embedded-storage = "0.3.1"
embedded-alloc = "0.7"
micromath = "2.0.0"
usbd-hid = "0.9.0"
static_cell = "2"
chrono = { version = "^0.4", default-features = false }

# vl53l1 = { git = "https://github.com/trung1-dothanh/vl53l1", rev = "26745b652e7c8aad1c03319e32b8552889bf6fbe" } # version that uses embedded-hal 1.0, update when new version is released
vl53l1 = { git = "https://github.com/bananasmoothii/vl53l1", features = ["defmt"] }
vl53l0x = { git = "https://github.com/bananasmoothii/vl53l0x", rev = "042f41d", features = ["defmt"] }

mpu9250 = { git = "https://github.com/bananasmoothii/mpu9250-forked", rev = "4bc31c80", features = ["defmt"] }

[profile.release]
debug = 2

[package.metadata.embassy]
build = [
    { target = "thumbv7em-none-eabi", artifact-dir = "out/examples/stm32f4" }
]

[[bin]]
name = "test"
path = "src/main.rs"
test = false
doctest = false
bench = false
